# behavioral-llm

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  results.csv  selected_config_path  streamlit_app.py
config/choice/: ad_framing_and_scarcity_choice.csv  ad_framing_and_scarcity_choice.yaml
config/choice/COO/: country of origin choice.yaml  country_of_origin_choice.csv
config/mixed/: Domestic Country Bias.yaml  Domestic_Country_Bias.csv
config/rank/: Domestic Country Bias.yaml
config/rank/Balabanis 2004/: Domestic Country Bias.yaml  Domestic_Country_Bias.csv
config/scales/: ad_framing_and_scarcity.csv  ad_framing_and_scarcity.yaml
src/: Analysis.py  _experiment.py  analysis_component.py  experiment.py  experiment_choice.py  experiment_component.py  experiment_rank.py  experiment_runners.py  global_configs.py  models.py  page_analysis.py  page_experiment.py  streamlit_app.py  test-llm.py  utils.py
